# disclosure-investing

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  ai_classifier.py  config.py  dart_client.py  database.py  document_parser.py  main.py  metrics.py  reporting.py  rule_classifier.py  streamlit_app.py
docs/: 01-disclosure-investing-overview.md  02-short-term-event-trading.md  03-long-term-disclosure-investing.md  04-risk-disclosures.md  05-daily-routine-and-checklists.md  06-development-plan.md  07-mvp-task-list.md  08-classification-schema.md  09-automation.md  10-ui-service-redesign-plan.md  README.md
reports/: daily-20260616.md
scripts/: classify_today.py  fetch_today.py  init_db.py  run_daily.ps1
tests/: test_ai_classifier.py  test_document_parser.py  test_job_runs.py  test_metrics.py  test_notes.py  test_reporting.py  test_rule_classifier.py
