[project]
name = "disclosure-investing"
version = "0.1.0"
description = "DART API based disclosure collection and classification tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "pandas>=3.0.3",
]

[project.scripts]
disclosure-investing = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
